--- a/2차_주제_농산물가격/weather_crawl.ipynb
+++ b/2차_주제_농산물가격/weather_crawl.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "metadata": {
     "scrolled": false
    },
@@ -55,15 +55,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "time : 975.1068749427795\n"
+      "time : 15.00988221168518\n"
      ]
     }
    ],
    "source": [
     "start = time.time()\n",
     "\n",
-    "driver = webdriver.Chrome(\"/Users/kimyihwan/20191216/2차_미니_프로젝트/mp02_real/webdriver/chromedriver 2\", \n",
+    "# driver = webdriver.Chrome(\"/Users/kimyihwan/20191216/2차_미니_프로젝트/mp02_real/webdriver/chromedriver 2\", \n",
+    "#                           options=options)\n",
+    "driver = webdriver.Chrome(\"./webdriver/chromedriver.exe\", \n",
     "                          options=options)\n",
+    "\n",
+    "\n",
     "\n",
     "driver.get(\"https://www.weather.go.kr/w/weather/now.do\")\n",
     "time.sleep(1)\n",
@@ -73,7 +77,7 @@
     "aa.click()\n",
     "time.sleep(0.5)\n",
     "\n",
-    "limit = datetime(2010, 1, 1, 14, 0, 0)\n",
+    "limit = datetime(2012, 4, 1, 14, 0, 0)\n",
     "date = datetime(2012, 4, 7, 14, 0, 0)\n",
     "\n",
     "date_li = list()\n",
@@ -434,9 +438,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.7.4 64-bit ('base': conda)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python37464bitbasecondacb974de5d481480ca67f41f19bdbb3fc"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
